--- a/examples/nb_01_write_read_pandas.ipynb
+++ b/examples/nb_01_write_read_pandas.ipynb
@@ -448,7 +448,7 @@
      "text": [
       "Specific collection: 1 series\n",
       "Single-series insert: column name doesn't matter\n",
-      "  Series used: {'my_power_reading': UUID('bf1253dd-24b4-4a48-a86c-d10f0fa00b7a')}\n"
+      "  Series used: {'my_power_reading': UUID('2dd3f894-5c7e-4cf8-9943-7e2009c20feb')}\n"
      ]
     }
    ],
@@ -519,7 +519,7 @@
     "3. **Check your filters**: Use `.count()` and `.list_labels()` to verify what you're selecting\n",
     "4. **Always include time**: DataFrames must have a `valid_time` column (or specify `valid_time_col` parameter)\n",
     "5. **Test incrementally**: Start broad with `.count()`, then narrow down with `.where()`\n",
-    "6. **Data class**: Use `data_class='actual'` (default) for measurements, `data_class='projection'` for forecasts"
+    "6. **Data class**: Use `data_class='flat'` (default) for measurements, `data_class='overlapping'` for forecasts"
    ]
   },
   {
