--- a/examples/nb_02_units_validation.ipynb
+++ b/examples/nb_02_units_validation.ipynb
@@ -36,7 +36,7 @@
     "load_dotenv()\n",
     "\n",
     "# Create the TimeDB client instance\n",
-    "client = td.TimeDataClient()"
+    "td = td.TimeDataClient()"
    ]
   },
   {
@@ -64,8 +64,8 @@
    ],
    "source": [
     "# Create database schema\n",
-    "client.delete()\n",
-    "client.create()"
+    "td.delete()\n",
+    "td.create()"
    ]
   },
   {
@@ -103,7 +103,7 @@
          "type": "unknown"
         }
        ],
-       "ref": "6af67f52-a7d6-4454-88e7-de353a84b095",
+       "ref": "48fd69df-13a0-41d6-9e22-a6d0d4ad702c",
        "rows": [
         [
          "0",
@@ -274,7 +274,7 @@
          "type": "unknown"
         }
        ],
-       "ref": "3392b69e-b56d-44d1-b454-cffe63e2388c",
+       "ref": "f20a4700-32b3-4910-a59f-24078c1a2ab1",
        "rows": [
         [
          "valid_time",
@@ -317,10 +317,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
-   "source": "# Insert the data - TimeDB automatically:\n# 1. Detects each column as a separate series\n# 2. Extracts units from pint-pandas Series dtype\n# 3. Creates series with name = column name\n# 4. Converts values to canonical units and stores them\n\n# Create series first, then insert data\npower_series_id = client.create_series(name=\"power\", unit=\"MW\")\nwind_series_id = client.create_series(name=\"wind_speed\", unit=\"m/s\")\ntemp_series_id = client.create_series(name=\"temperature\", unit=\"degree_Celsius\")\n\n# Insert each series separately using the fluent API\nresult_power = client.series(\"power\").insert(\n    pd.DataFrame({\n        \"valid_time\": times,\n        \"power\": pd.Series(power_vals_MW, dtype=\"pint[MW]\")\n    })\n)\n\nresult_wind = client.series(\"wind_speed\").insert(\n    pd.DataFrame({\n        \"valid_time\": times,\n        \"wind_speed\": pd.Series(wind_vals_m_s, dtype=\"pint[m/s]\")\n    })\n)\n\nresult_temp = client.series(\"temperature\").insert(\n    pd.DataFrame({\n        \"valid_time\": times,\n        \"temperature\": pd.Series(temp_vals_C, dtype=\"pint[degree_Celsius]\")\n    })\n)\n\nprint(\"Data inserted successfully!\")\nprint(f\"\\nSeries created:\")\nprint(f\"  power: {power_series_id}\")\nprint(f\"  wind_speed: {wind_series_id}\")\nprint(f\"  temperature: {temp_series_id}\")\n\n# Store the series_ids for later use\nseries_ids_map = {\n    'power': power_series_id,\n    'wind_speed': wind_series_id,\n    'temperature': temp_series_id\n}"
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Data inserted successfully!\n",
+      "\n",
+      "Series created:\n",
+      "  power: 99023e6d-4165-4785-86d8-53caa394f8d9\n",
+      "  wind_speed: 3224ff99-7a57-480d-9aca-9f1af7f6461e\n",
+      "  temperature: 30bcbe18-0ec8-491c-87de-d6098eaa7ed2\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Insert the data - TimeDB automatically:\n",
+    "# 1. Detects each column as a separate series\n",
+    "# 2. Extracts units from pint-pandas Series dtype\n",
+    "# 3. Creates series with name = column name\n",
+    "# 4. Converts values to canonical units and stores them\n",
+    "\n",
+    "# Create series first, then insert data\n",
+    "power_series_id = td.create_series(name=\"power\", unit=\"MW\")\n",
+    "wind_series_id = td.create_series(name=\"wind_speed\", unit=\"m/s\")\n",
+    "temp_series_id = td.create_series(name=\"temperature\", unit=\"degree_Celsius\")\n",
+    "\n",
+    "# Insert each series separately using the fluent API\n",
+    "result_power = td.series(\"power\").insert(\n",
+    "    pd.DataFrame({\n",
+    "        \"valid_time\": times,\n",
+    "        \"power\": pd.Series(power_vals_MW, dtype=\"pint[MW]\")\n",
+    "    })\n",
+    ")\n",
+    "\n",
+    "result_wind = td.series(\"wind_speed\").insert(\n",
+    "    pd.DataFrame({\n",
+    "        \"valid_time\": times,\n",
+    "        \"wind_speed\": pd.Series(wind_vals_m_s, dtype=\"pint[m/s]\")\n",
+    "    })\n",
+    ")\n",
+    "\n",
+    "result_temp = td.series(\"temperature\").insert(\n",
+    "    pd.DataFrame({\n",
+    "        \"valid_time\": times,\n",
+    "        \"temperature\": pd.Series(temp_vals_C, dtype=\"pint[degree_Celsius]\")\n",
+    "    })\n",
+    ")\n",
+    "\n",
+    "print(\"Data inserted successfully!\")\n",
+    "print(f\"\\nSeries created:\")\n",
+    "print(f\"  power: {power_series_id}\")\n",
+    "print(f\"  wind_speed: {wind_series_id}\")\n",
+    "print(f\"  temperature: {temp_series_id}\")\n",
+    "\n",
+    "# Store the series_ids for later use\n",
+    "series_ids_map = {\n",
+    "    'power': power_series_id,\n",
+    "    'wind_speed': wind_series_id,\n",
+    "    'temperature': temp_series_id\n",
+    "}"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -376,7 +435,7 @@
          "type": "unknown"
         }
        ],
-       "ref": "e85db667-f7c2-402b-a44b-e772d94419f2",
+       "ref": "cbe8d9b6-eedb-4d02-b60f-5c07e25aa104",
        "rows": [
         [
          "2025-01-01 00:00:00+00:00",
@@ -497,9 +556,9 @@
    "source": [
     "# Read all data back using the fluent API\n",
     "# Each series is read separately and combined\n",
-    "df_power = client.series(\"power\").read()\n",
-    "df_wind = client.series(\"wind_speed\").read()\n",
-    "df_temp = client.series(\"temperature\").read()\n",
+    "df_power = td.series(\"power\").read()\n",
+    "df_wind = td.series(\"wind_speed\").read()\n",
+    "df_temp = td.series(\"temperature\").read()\n",
     "\n",
     "# Combine into a single DataFrame\n",
     "df_read = pd.concat([df_power, df_wind, df_temp], axis=1)\n",
@@ -718,24 +777,144 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
-   "source": "# Example 1: Uploading compatible units (kW -> MW conversion)\n# This should work fine - kW and MW are compatible (both are power units)\n\nprint(\"Example 1: Uploading compatible units (kW to MW series)\")\nprint(\"=\" * 60)\n\n# Create new data in kilowatts (compatible with MW - will be converted)\nnew_times = [base_time + timedelta(hours=i) for i in range(24, 48)]\npower_vals_kW = [100.0 + i * 5.0 for i in range(24)]  # Values in kW\n\ndf_compatible = pd.DataFrame({\n    \"valid_time\": new_times,\n    \"power\": pd.Series(power_vals_kW, dtype=\"pint[kW]\")  # kW is compatible with MW\n})\n\ntry:\n    # Use series collection to write to the existing series\n    result_compatible = client.series(\"power\").insert(df_compatible)\n    print(\"SUCCESS: kW values were automatically converted to MW and stored\")\n    print(f\"  Inserted {len(new_times)} new data points\")\n    print(f\"  Note: 100 kW = 0.1 MW (automatic conversion)\")\nexcept Exception as e:\n    print(f\"ERROR: {type(e).__name__}: {e}\")"
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Example 1: Uploading compatible units (kW to MW series)\n",
+      "============================================================\n",
+      "SUCCESS: kW values were automatically converted to MW and stored\n",
+      "  Inserted 24 new data points\n",
+      "  Note: 100 kW = 0.1 MW (automatic conversion)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Example 1: Uploading compatible units (kW -> MW conversion)\n",
+    "# This should work fine - kW and MW are compatible (both are power units)\n",
+    "\n",
+    "print(\"Example 1: Uploading compatible units (kW to MW series)\")\n",
+    "print(\"=\" * 60)\n",
+    "\n",
+    "# Create new data in kilowatts (compatible with MW - will be converted)\n",
+    "new_times = [base_time + timedelta(hours=i) for i in range(24, 48)]\n",
+    "power_vals_kW = [100.0 + i * 5.0 for i in range(24)]  # Values in kW\n",
+    "\n",
+    "df_compatible = pd.DataFrame({\n",
+    "    \"valid_time\": new_times,\n",
+    "    \"power\": pd.Series(power_vals_kW, dtype=\"pint[kW]\")  # kW is compatible with MW\n",
+    "})\n",
+    "\n",
+    "try:\n",
+    "    # Use series collection to write to the existing series\n",
+    "    result_compatible = td.series(\"power\").insert(df_compatible)\n",
+    "    print(\"SUCCESS: kW values were automatically converted to MW and stored\")\n",
+    "    print(f\"  Inserted {len(new_times)} new data points\")\n",
+    "    print(f\"  Note: 100 kW = 0.1 MW (automatic conversion)\")\n",
+    "except Exception as e:\n",
+    "    print(f\"ERROR: {type(e).__name__}: {e}\")"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
-   "source": "# Example 2: Uploading incompatible units (MWh -> MW series)\n# This should FAIL - MWh (energy) is incompatible with MW (power)\n\nprint(\"\\nExample 2: Uploading incompatible units (MWh to MW series)\")\nprint(\"=\" * 60)\n\n# Create new data in megawatt-hours (INCOMPATIBLE with MW - energy vs power!)\nnew_times2 = [base_time + timedelta(hours=i) for i in range(48, 72)]\nenergy_vals_MWh = [10.0 + i * 0.5 for i in range(24)]  # Values in MWh\n\ndf_incompatible = pd.DataFrame({\n    \"valid_time\": new_times2,\n    \"power\": pd.Series(energy_vals_MWh, dtype=\"pint[MWh]\")  # MWh is INCOMPATIBLE with MW!\n})\n\ntry:\n    # Use series collection to write to the existing series\n    result_incompatible = client.series(\"power\").insert(df_incompatible)\n    print(\"UNEXPECTED: This should have failed but didn't!\")\nexcept Exception as e:\n    if \"IncompatibleUnitError\" in str(type(e).__name__) or \"incompatible\" in str(e).lower():\n        print(f\"EXPECTED ERROR: {type(e).__name__}\")\n        print(f\"  Message: {e}\")\n        print(f\"\\n  This error occurred because:\")\n        print(f\"    - The 'power' series has canonical unit: {canonical_unit} (power)\")\n        print(f\"    - You tried to upload values with unit: MWh (energy)\")\n        print(f\"    - Power and energy have incompatible dimensionality\")\n    else:\n        print(f\"UNEXPECTED ERROR: {type(e).__name__}: {e}\")"
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Example 2: Uploading incompatible units (MWh to MW series)\n",
+      "============================================================\n",
+      "EXPECTED ERROR: IncompatibleUnitError\n",
+      "  Message: Cannot convert megawatt_hour to MW: incompatible dimensionality (Cannot convert from 'megawatt_hour' ([mass] * [length] ** 2 / [time] ** 2) to 'megawatt' ([mass] * [length] ** 2 / [time] ** 3))\n",
+      "\n",
+      "  This error occurred because:\n",
+      "    - The 'power' series has canonical unit: pint[megawatt][Float64] (power)\n",
+      "    - You tried to upload values with unit: MWh (energy)\n",
+      "    - Power and energy have incompatible dimensionality\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Example 2: Uploading incompatible units (MWh -> MW series)\n",
+    "# This should FAIL - MWh (energy) is incompatible with MW (power)\n",
+    "\n",
+    "print(\"\\nExample 2: Uploading incompatible units (MWh to MW series)\")\n",
+    "print(\"=\" * 60)\n",
+    "\n",
+    "# Create new data in megawatt-hours (INCOMPATIBLE with MW - energy vs power!)\n",
+    "new_times2 = [base_time + timedelta(hours=i) for i in range(48, 72)]\n",
+    "energy_vals_MWh = [10.0 + i * 0.5 for i in range(24)]  # Values in MWh\n",
+    "\n",
+    "df_incompatible = pd.DataFrame({\n",
+    "    \"valid_time\": new_times2,\n",
+    "    \"power\": pd.Series(energy_vals_MWh, dtype=\"pint[MWh]\")  # MWh is INCOMPATIBLE with MW!\n",
+    "})\n",
+    "\n",
+    "try:\n",
+    "    # Use series collection to write to the existing series\n",
+    "    result_incompatible = td.series(\"power\").insert(df_incompatible)\n",
+    "    print(\"UNEXPECTED: This should have failed but didn't!\")\n",
+    "except Exception as e:\n",
+    "    if \"IncompatibleUnitError\" in str(type(e).__name__) or \"incompatible\" in str(e).lower():\n",
+    "        print(f\"EXPECTED ERROR: {type(e).__name__}\")\n",
+    "        print(f\"  Message: {e}\")\n",
+    "        print(f\"\\n  This error occurred because:\")\n",
+    "        print(f\"    - The 'power' series has canonical unit: {canonical_unit} (power)\")\n",
+    "        print(f\"    - You tried to upload values with unit: MWh (energy)\")\n",
+    "        print(f\"    - Power and energy have incompatible dimensionality\")\n",
+    "    else:\n",
+    "        print(f\"UNEXPECTED ERROR: {type(e).__name__}: {e}\")"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
-   "source": "# Example 3: Uploading compatible but different units (W -> MW series)\n# This should work fine - W (watts) is compatible with MW (megawatts)\n\nprint(\"\\nExample 3: Uploading compatible but different units (W to MW series)\")\nprint(\"=\" * 60)\n\n# Create new data in watts (compatible with MW - just a different scale)\nnew_times3 = [base_time + timedelta(hours=i) for i in range(72, 96)]\npower_vals_W = [100000.0 + i * 5000.0 for i in range(24)]  # Values in W\n\ndf_watts = pd.DataFrame({\n    \"valid_time\": new_times3,\n    \"power\": pd.Series(power_vals_W, dtype=\"pint[W]\")  # W is compatible with MW\n})\n\ntry:\n    # Use series collection to write to the existing series\n    result_watts = client.series(\"power\").insert(df_watts)\n    print(\"SUCCESS: W values were automatically converted to MW and stored\")\n    print(f\"  Inserted {len(new_times3)} new data points\")\n    print(f\"  Note: 100000 W = 0.1 MW (automatic conversion)\")\nexcept Exception as e:\n    print(f\"ERROR: {type(e).__name__}: {e}\")"
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Example 3: Uploading compatible but different units (W to MW series)\n",
+      "============================================================\n",
+      "SUCCESS: W values were automatically converted to MW and stored\n",
+      "  Inserted 24 new data points\n",
+      "  Note: 100000 W = 0.1 MW (automatic conversion)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Example 3: Uploading compatible but different units (W -> MW series)\n",
+    "# This should work fine - W (watts) is compatible with MW (megawatts)\n",
+    "\n",
+    "print(\"\\nExample 3: Uploading compatible but different units (W to MW series)\")\n",
+    "print(\"=\" * 60)\n",
+    "\n",
+    "# Create new data in watts (compatible with MW - just a different scale)\n",
+    "new_times3 = [base_time + timedelta(hours=i) for i in range(72, 96)]\n",
+    "power_vals_W = [100000.0 + i * 5000.0 for i in range(24)]  # Values in W\n",
+    "\n",
+    "df_watts = pd.DataFrame({\n",
+    "    \"valid_time\": new_times3,\n",
+    "    \"power\": pd.Series(power_vals_W, dtype=\"pint[W]\")  # W is compatible with MW\n",
+    "})\n",
+    "\n",
+    "try:\n",
+    "    # Use series collection to write to the existing series\n",
+    "    result_watts = td.series(\"power\").insert(df_watts)\n",
+    "    print(\"SUCCESS: W values were automatically converted to MW and stored\")\n",
+    "    print(f\"  Inserted {len(new_times3)} new data points\")\n",
+    "    print(f\"  Note: 100000 W = 0.1 MW (automatic conversion)\")\n",
+    "except Exception as e:\n",
+    "    print(f\"ERROR: {type(e).__name__}: {e}\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -784,9 +963,9 @@
    ],
    "source": [
     "# Final verification: Read all data to see the complete time series\n",
-    "df_power = client.series(\"power\").read()\n",
-    "df_wind = client.series(\"wind_speed\").read()\n",
-    "df_temp = client.series(\"temperature\").read()\n",
+    "df_power = td.series(\"power\").read()\n",
+    "df_wind = td.series(\"wind_speed\").read()\n",
+    "df_temp = td.series(\"temperature\").read()\n",
     "df_final = pd.concat([df_power, df_wind, df_temp], axis=1)\n",
     "\n",
     "print(\"✓ Final data read\")\n",
