--- a/examples/quickstart.ipynb
+++ b/examples/quickstart.ipynb
@@ -54,7 +54,7 @@
    "source": [
     "## 2. Create a Series\n",
     "\n",
-    "A series is identified by its name, unit, and optional labels. Since this is forecast data, we set `data_class='projection'`."
+    "A series is identified by its name, unit, and optional labels. Since this is forecast data, we set `data_class='overlapping'`."
    ]
   },
   {
@@ -68,7 +68,7 @@
     "    name='wind_power',\n",
     "    unit='MW',\n",
     "    labels={'site': 'offshore_1', 'type': 'forecast'},\n",
-    "    data_class='projection'\n",
+    "    data_class='overlapping'\n",
     ")"
    ]
   },
@@ -91,7 +91,7 @@
     {
      "data": {
       "text/plain": [
-       "InsertResult(batch_id=UUID('1865551a-3f26-462c-9b97-a713cd0f5394'), workflow_id='sdk-workflow', series_ids={'wind_power': UUID('9c55776a-5e65-419d-9aff-7859af908721')}, tenant_id=UUID('00000000-0000-0000-0000-000000000000'))"
+       "InsertResult(batch_id=UUID('df3b9efb-265d-4b7a-a29a-5aad0f7f9d56'), workflow_id='sdk-workflow', series_ids={'wind_power': UUID('c9f23b13-a2d2-4a3f-88e0-aa8550e4e818')}, tenant_id=UUID('00000000-0000-0000-0000-000000000000'))"
       ]
      },
      "execution_count": 3,
@@ -136,7 +136,7 @@
     {
      "data": {
       "text/plain": [
-       "InsertResult(batch_id=UUID('778ca6ba-330c-4e0a-a9e6-db7510b3b565'), workflow_id='sdk-workflow', series_ids={'wind_power': UUID('9c55776a-5e65-419d-9aff-7859af908721')}, tenant_id=UUID('00000000-0000-0000-0000-000000000000'))"
+       "InsertResult(batch_id=UUID('53a6f8b9-845b-42b5-823e-59bfd8e8fb09'), workflow_id='sdk-workflow', series_ids={'wind_power': UUID('c9f23b13-a2d2-4a3f-88e0-aa8550e4e818')}, tenant_id=UUID('00000000-0000-0000-0000-000000000000'))"
       ]
      },
      "execution_count": 4,
@@ -191,7 +191,7 @@
          "type": "unknown"
         }
        ],
-       "ref": "dfbf61d9-8a6a-4abd-8c0d-51c83a9c4c0a",
+       "ref": "5524451e-f844-4d7d-afe4-f6bfe4b3ecf0",
        "rows": [
         [
          "2025-01-01 00:00:00+00:00",
@@ -377,7 +377,7 @@
          "type": "unknown"
         }
        ],
-       "ref": "18e7cd08-8794-4703-9572-dcc4d6c229d9",
+       "ref": "233ad162-1857-4eda-9e5b-4a025bfe1e35",
        "rows": [
         [
          "(Timestamp('2025-01-01 00:00:00+0000', tz='UTC'), Timestamp('2025-01-01 00:00:00+0000', tz='UTC'))",
@@ -586,7 +586,7 @@
     "\n",
     "You've learned the basics of TimeDB:\n",
     "\n",
-    "1. **Create series** - Define your time series with name, unit, labels, and `data_class` (actual or projection)\n",
+    "1. **Create series** - Define your time series with name, unit, labels, and `data_class` (flat or overlapping)\n",
     "2. **Insert data** - Store forecasts with `known_time` using `insert()`\n",
     "3. **Read latest** - Get the most recent forecast for each time point using `read()`\n",
     "4. **Read revisions** - Access all forecast versions using `read(versions=True)` to analyze changes\n",
@@ -595,7 +595,7 @@
     "\n",
     "- **`valid_time`**: The time period being forecasted\n",
     "- **`known_time`**: When the forecast was made\n",
-    "- **`data_class`**: `'actual'` for immutable facts (default), `'projection'` for versioned forecasts\n",
+    "- **`data_class`**: `'flat'` for immutable facts (default), `'overlapping'` for versioned forecasts\n",
     "- **Series Collection**: Use `.series().where()` to filter by name and labels\n",
     "- **Forecast Revisions**: Multiple forecasts for the same `valid_time` with different `known_time`\n",
     "\n",
@@ -604,6 +604,12 @@
     "- Check out `nb_03_forecast_revisions.ipynb` for more detailed examples\n",
     "- Explore other notebooks for advanced features"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bd58761c",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
