update documentation; improve updating (change either by batch_id, known_time or automatically the latest time; update corresponding examples

--- a/examples/nb_08a_authentication_cli.ipynb
+++ b/examples/nb_08a_authentication_cli.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "cell-1",
    "metadata": {},
    "outputs": [
@@ -27,7 +27,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Database URL configured: postgres://tsdbadmin:sykc9mku4fxsd4ya@u4c7ocoul8.r...\n",
+      "Database URL configured: postgres://tsdbadmin:xizwx6vz1nrecefk@u4c7ocoul8.r...\n",
       "Environment variables set for API server\n",
       "API URL: http://127.0.0.1:8000\n"
      ]
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "cell-3",
    "metadata": {},
    "outputs": [
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "cell-4",
    "metadata": {},
    "outputs": [
@@ -125,19 +125,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "cell-6",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Tenant A ID: 58f8e2e1-2202-475e-ab0f-8973aada1b3a\n",
-      "Tenant B ID: 695ea155-2f68-4d05-967e-fcf4b81a2afc\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Generate two tenant IDs\n",
     "tenant_a_id = str(uuid.uuid4())\n",
@@ -149,28 +140,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "cell-7",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\u001b[32m╭─\u001b[0m\u001b[32m─────────────────────────────────\u001b[0m\u001b[32m New User \u001b[0m\u001b[32m─────────────────────────────────\u001b[0m\u001b[32m─╮\u001b[0m\n",
-      "\u001b[32m│\u001b[0m \u001b[1;32mUser created successfully!\u001b[0m                                                   \u001b[32m│\u001b[0m\n",
-      "\u001b[32m│\u001b[0m                                                                              \u001b[32m│\u001b[0m\n",
-      "\u001b[32m│\u001b[0m   User ID:   \u001b[36m469e71cc-a7d5-486a-9867-bcaf4baf94da\u001b[0m                            \u001b[32m│\u001b[0m\n",
-      "\u001b[32m│\u001b[0m   Tenant ID: \u001b[36m58f8e2e1-2202-475e-ab0f-8973aada1b3a\u001b[0m                            \u001b[32m│\u001b[0m\n",
-      "\u001b[32m│\u001b[0m   Email:     \u001b[36malice@tenant-a.com\u001b[0m                                              \u001b[32m│\u001b[0m\n",
-      "\u001b[32m│\u001b[0m                                                                              \u001b[32m│\u001b[0m\n",
-      "\u001b[32m│\u001b[0m   \u001b[1;33mAPI Key:\u001b[0m \u001b[1mtUFzWPNOLVgwCmJasxypnu_EGMYGBkIfv34nYZDKZfg\u001b[0m                       \u001b[32m│\u001b[0m\n",
-      "\u001b[32m╰──────────────────────────────────────────────────────────────────────────────╯\u001b[0m\n",
-      "\n",
-      "\u001b[33m⚠ Save the API key - it will not be shown again.\u001b[0m\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Create User A for Tenant A\n",
     "!timedb users create --dsn \"{DATABASE_URL}\" --tenant-id {tenant_a_id} --email alice@tenant-a.com"
@@ -178,18 +151,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "cell-8",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Stored API Key A: tUFzWPNOLVgwCmJasxypnu_EGMYGBkIfv34nYZDKZfg\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Extract API key from the output above\n",
     "# You'll need to copy the API key manually from the output above\n",
@@ -199,28 +164,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "cell-9",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\u001b[32m╭─\u001b[0m\u001b[32m─────────────────────────────────\u001b[0m\u001b[32m New User \u001b[0m\u001b[32m─────────────────────────────────\u001b[0m\u001b[32m─╮\u001b[0m\n",
-      "\u001b[32m│\u001b[0m \u001b[1;32mUser created successfully!\u001b[0m                                                   \u001b[32m│\u001b[0m\n",
-      "\u001b[32m│\u001b[0m                                                                              \u001b[32m│\u001b[0m\n",
-      "\u001b[32m│\u001b[0m   User ID:   \u001b[36m7721d794-deaf-45af-938c-a583928ede2d\u001b[0m                            \u001b[32m│\u001b[0m\n",
-      "\u001b[32m│\u001b[0m   Tenant ID: \u001b[36m695ea155-2f68-4d05-967e-fcf4b81a2afc\u001b[0m                            \u001b[32m│\u001b[0m\n",
-      "\u001b[32m│\u001b[0m   Email:     \u001b[36mbob@tenant-b.com\u001b[0m                                                \u001b[32m│\u001b[0m\n",
-      "\u001b[32m│\u001b[0m                                                                              \u001b[32m│\u001b[0m\n",
-      "\u001b[32m│\u001b[0m   \u001b[1;33mAPI Key:\u001b[0m \u001b[1mg4v4aXk7E4uJL7VqoYp3pQlSNWk9HjfGSNmMPzGdUEc\u001b[0m                       \u001b[32m│\u001b[0m\n",
-      "\u001b[32m╰──────────────────────────────────────────────────────────────────────────────╯\u001b[0m\n",
-      "\n",
-      "\u001b[33m⚠ Save the API key - it will not be shown again.\u001b[0m\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Create User B for Tenant B\n",
     "!timedb users create --dsn \"{DATABASE_URL}\" --tenant-id {tenant_b_id} --email bob@tenant-b.com"
@@ -228,18 +175,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "cell-10",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Stored API Key B: g4v4aXk7E4uJL7VqoYp3pQlSNWk9HjfGSNmMPzGdUEc\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Extract API key from the output above\n",
     "api_key_b = input(\"Enter API Key for User B from output above: \")\n",
@@ -248,26 +187,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "cell-11",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\u001b[3m                                  Users (4)                                   \u001b[0m\n",
-      "┏━━━━━━━━━━━━━━━━━━━━┳━━━━━━━━━━━━━┳━━━━━━━━━━━━━┳━━━━━━━━┳━━━━━━━━━━━━━━━━━━┓\n",
-      "┃\u001b[1m \u001b[0m\u001b[1mEmail             \u001b[0m\u001b[1m \u001b[0m┃\u001b[1m \u001b[0m\u001b[1mUser ID    \u001b[0m\u001b[1m \u001b[0m┃\u001b[1m \u001b[0m\u001b[1mTenant ID  \u001b[0m\u001b[1m \u001b[0m┃\u001b[1m \u001b[0m\u001b[1mStatus\u001b[0m\u001b[1m \u001b[0m┃\u001b[1m \u001b[0m\u001b[1mCreated         \u001b[0m\u001b[1m \u001b[0m┃\n",
-      "┡━━━━━━━━━━━━━━━━━━━━╇━━━━━━━━━━━━━╇━━━━━━━━━━━━━╇━━━━━━━━╇━━━━━━━━━━━━━━━━━━┩\n",
-      "│\u001b[36m \u001b[0m\u001b[36mbob@tenant-b.com  \u001b[0m\u001b[36m \u001b[0m│\u001b[2m \u001b[0m\u001b[2m7721d794...\u001b[0m\u001b[2m \u001b[0m│\u001b[2m \u001b[0m\u001b[2m695ea155...\u001b[0m\u001b[2m \u001b[0m│ \u001b[32mactive\u001b[0m │\u001b[2m \u001b[0m\u001b[2m2026-02-02 16:33\u001b[0m\u001b[2m \u001b[0m│\n",
-      "│\u001b[36m \u001b[0m\u001b[36malice@tenant-a.com\u001b[0m\u001b[36m \u001b[0m│\u001b[2m \u001b[0m\u001b[2m469e71cc...\u001b[0m\u001b[2m \u001b[0m│\u001b[2m \u001b[0m\u001b[2m58f8e2e1...\u001b[0m\u001b[2m \u001b[0m│ \u001b[32mactive\u001b[0m │\u001b[2m \u001b[0m\u001b[2m2026-02-02 16:32\u001b[0m\u001b[2m \u001b[0m│\n",
-      "│\u001b[36m \u001b[0m\u001b[36mbob@tenant-b.com  \u001b[0m\u001b[36m \u001b[0m│\u001b[2m \u001b[0m\u001b[2m92129dc8...\u001b[0m\u001b[2m \u001b[0m│\u001b[2m \u001b[0m\u001b[2med1c643e...\u001b[0m\u001b[2m \u001b[0m│ \u001b[32mactive\u001b[0m │\u001b[2m \u001b[0m\u001b[2m2026-02-02 16:31\u001b[0m\u001b[2m \u001b[0m│\n",
-      "│\u001b[36m \u001b[0m\u001b[36malice@tenant-a.com\u001b[0m\u001b[36m \u001b[0m│\u001b[2m \u001b[0m\u001b[2md5acf895...\u001b[0m\u001b[2m \u001b[0m│\u001b[2m \u001b[0m\u001b[2madbe46ce...\u001b[0m\u001b[2m \u001b[0m│ \u001b[32mactive\u001b[0m │\u001b[2m \u001b[0m\u001b[2m2026-02-02 16:31\u001b[0m\u001b[2m \u001b[0m│\n",
-      "└────────────────────┴─────────────┴─────────────┴────────┴──────────────────┘\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# List all users to verify\n",
     "!timedb users list --dsn \"{DATABASE_URL}\""
@@ -285,18 +208,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "cell-13",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Killed any existing API server\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Kill any existing API server first\n",
     "!pkill -f \"uvicorn.*timedb\" || true\n",
@@ -310,7 +225,17 @@
    "id": "cell-14",
    "metadata": {},
    "outputs": [],
-   "source": "import subprocess\n\n# Start API server in background (can't use ! with & in notebooks)\nprocess = subprocess.Popen(\n    [\"timedb\", \"api\", \"--host\", \"127.0.0.1\", \"--port\", \"8000\"],\n    stdout=subprocess.DEVNULL,\n    stderr=subprocess.DEVNULL\n)\nprint(\"API server started in background\")"
+   "source": [
+    "import subprocess\n",
+    "\n",
+    "# Start API server in background (can't use ! with & in notebooks)\n",
+    "process = subprocess.Popen(\n",
+    "    [\"timedb\", \"api\", \"--host\", \"127.0.0.1\", \"--port\", \"8000\"],\n",
+    "    stdout=subprocess.DEVNULL,\n",
+    "    stderr=subprocess.DEVNULL\n",
+    ")\n",
+    "print(\"API server started in background\")"
+   ]
   },
   {
    "cell_type": "code",
